--- a/src/ApiRocketMovies/ApiRocketMovies.csproj
+++ b/src/ApiRocketMovies/ApiRocketMovies.csproj
@@ -41,4 +41,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="7.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
